# aperture_server

./: .gitignore  Cargo.toml  Makefile  Readme.md
models/: .gitkeep
scripts/: download_models.sh  init_libtorch.sh
src/: analyzer.rs  main.rs
