[package]
name = "aperture_server"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.6", default-features = false, features = ["jpeg"] }
tch = { version = "0.20.0", default-features = false, features = ["download-libtorch"]}


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
